Fixed z-index of the legend: now it goes behind the bubbles

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -123,7 +123,7 @@ div.tabs div#map div#canary_island {position:absolute; width:300px; height:160px
 div.tabs div#map div#canary_island.left {left:0; right:none; border-left:none; border-right:1px solid black;}
 div.tabs div#graph {position:absolute; left:0; right:0; top:0; bottom:0; width:100%; background: #cccccc; z-index:0;}
 div.tabs div#graph div#graph_container {position:absolute; left:50%; top:40px; width:1024px; height:580px; margin:0 0 0 -512px; background:url('/images/graph_bkg.png'); z-index:0;}
-div.tabs div#graph div.legend {position: absolute; left:50%; width:1024px; margin:0 0 0 -502px;  font:normal 13px "Officina Regular"; color:#333;text-align:center; z-index:100;}
+div.tabs div#graph div.legend {position: absolute; left:50%; width:1024px; margin:0 0 0 -502px;  font:normal 13px "Officina Regular"; color:#333;text-align:center;}
 div.tabs div#graph div#top_legend { top: 87px;}
 div.tabs div#graph div#bottom_legend {top: 530px;}
 /*graph*/
